--- a/CreateClass/CreateClass/CreateClass.csproj
+++ b/CreateClass/CreateClass/CreateClass.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Emloyee.cs" />
+    <Compile Include="Employee.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
